[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Img/betterCards/Card_6.png" type="Texture" id=1]
[ext_resource path="res://Scripts/CardScript.gd" type="Script" id=2]

[node name="Card" type="TextureButton"]
texture_normal = ExtResource( 1 )
expand = true
script = ExtResource( 2 )

[connection signal="mouse_entered" from="." to="." method="_on_Card_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Card_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_Card_pressed"]
